[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "query-redis"
path = "src/query.rs"
[[bin]]
name = "update-redis"
path = "src/update.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1.6.0"
